more video updates

--- a/energy.html
+++ b/energy.html
@@ -150,8 +150,16 @@
         <div class="white-section">
           <div class="top">
             <div class="sidebar-video-wrapper">
-              <script src="https://fast.wistia.com/embed/medias/9f4daysuna.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:42.5% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_9f4daysuna videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/9f4daysuna/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" /></div></div></div></div>
 
+
+              <div class="fitb-popup-contain">
+                <div class="pop-trigger">
+                  <img src="assets/images/video-preview.jpg" />
+                  <div class="fitb-pop">
+                    <script src="https://fast.wistia.com/embed/medias/9f4daysuna.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:42.5% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_9f4daysuna videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/9f4daysuna/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" /></div></div></div></div>
+                  </div>
+                </div>
+              </div>
               <p class="slate">
                 See how ADNOC maximizes value from its reserves to operations, driven by digital transformation.
               </p>
@@ -421,6 +429,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="assets/js/new-scenes.js"></script>
     <script src="assets/js/match-height.js"></script>
+    <script src="assets/js/la-custom.js"></script>
     <script src="assets/js/sidebar.js"></script>
   </body>
 </html>
