more qa changes

--- a/chemicals.html
+++ b/chemicals.html
@@ -89,7 +89,7 @@
                   <div class="video-overlay show-on-level">
                     <div class="pulse-dot sustainability" data-sidebar="sustainability">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                      <div class="tooltip">Drive Sustainability</div>
+                      <div class="tooltip">Drive Circularity</div>
                     </div>
                     <div class="pulse-dot performance" data-sidebar="performance">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
@@ -123,7 +123,7 @@
                   <div class="video-overlay show-on-level">
                     <div class="pulse-dot margins" data-sidebar="margins">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                      <div class="tooltip">Improve margins</div>
+                      <div class="tooltip">Improve margin</div>
                     </div>
                     <div class="pulse-dot downtime"  data-sidebar="downtime">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
@@ -131,7 +131,7 @@
                     </div>
                     <div class="pulse-dot agility" data-sidebar="agility">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                      <div class="tooltip">Increase agility</div>
+                      <div class="tooltip">Accelerate agility</div>
                     </div>
                   </div>
                 </div>
