--- a/energy.html
+++ b/energy.html
@@ -143,7 +143,7 @@
           </p>
 
           <p class="white">
-            AVEVA helps you to manage performance in real-time to optimize operations. With edge-to-enterprise visibility, you can maximize profitability as business conditions change through smarter operational insights and faster time-to-decision.
+            AVEVA helps you to manage performance in real time to optimize operations. With edge-to-enterprise visibility, you can maximize profitability as business conditions change through smarter operational insights and faster time-to-decision.
           </p>
         </div>
 
