--- a/chemicals.html
+++ b/chemicals.html
@@ -91,11 +91,11 @@
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
                       <div class="tooltip">Drive Circularity</div>
                     </div>
-                    <div class="pulse-dot performance" data-sidebar="performance">
+                    <div class="pulse-dot pulse-dot-reverse-mobile performance" data-sidebar="performance">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
                       <div class="tooltip">Improve Performance</div>
                     </div>
-                    <div class="pulse-dot competency" data-sidebar="competency">
+                    <div class="pulse-dot pulse-dot-reverse-mobile competency" data-sidebar="competency">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
                       <div class="tooltip">Build Competency</div>
                     </div>
@@ -125,11 +125,11 @@
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
                       <div class="tooltip">Improve margin</div>
                     </div>
-                    <div class="pulse-dot downtime"  data-sidebar="downtime">
+                    <div class="pulse-dot pulse-dot-reverse-mobile downtime"  data-sidebar="downtime">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
                       <div class="tooltip">Eliminate downtime</div>
                     </div>
-                    <div class="pulse-dot agility" data-sidebar="agility">
+                    <div class="pulse-dot pulse-dot-reverse-mobile agility" data-sidebar="agility">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
                       <div class="tooltip">Accelerate agility</div>
                     </div>
