--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </ul>
         </div>
         <div class="col col-right dark">
-          <p class="large slate">
+          <p class="large">
             AVEVA provides expert software to the top 15 leading chemical companies, enabling them to unify data, drive engineering excellence and operational agility, and support circularity and sustainable performance.
           </p>
           <a href="chemicals.html" class="button">Get Started</a>
@@ -207,7 +207,7 @@
           </ul>
         </div>
         <div class="col col-right dark">
-          <p class="large slate">
+          <p class="large">
             As a recognized leader in the energy industry, AVEVA enables 19 of the top 20 energy companies, over 300 refineries and 900,000 miles of pipeline to improve their businesses, enable agility and drive net-zero operations through digital transformation.
           </p>
           <a href="energy.html" class="button">Get Started</a>
@@ -245,7 +245,7 @@
           </ul>
         </div>
         <div class="col col-right dark">
-          <p class="large slate">
+          <p class="large">
             AVEVA enables the digital transformation of the power industry by improving plant efficiency, increasing reliability and creating a connected workforce while meeting sustainability goals and shareholder needs.
           </p>
           <a href="power.html" class="button">Get Started</a>
