--- a/chemicals.html
+++ b/chemicals.html
@@ -89,15 +89,15 @@
                   <div class="video-overlay show-on-level">
                     <div class="pulse-dot sustainability" data-sidebar="sustainability">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                      <div class="tooltip">Drive Circularity</div>
+                      <div class="tooltip">Drive circularity</div>
                     </div>
                     <div class="pulse-dot pulse-dot-reverse-mobile performance" data-sidebar="performance">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                      <div class="tooltip">Improve Performance</div>
+                      <div class="tooltip">Improve performance</div>
                     </div>
                     <div class="pulse-dot pulse-dot-reverse-mobile competency" data-sidebar="competency">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                      <div class="tooltip">Build Competency</div>
+                      <div class="tooltip">Build competency</div>
                     </div>
                   </div>
                 </div>
@@ -145,7 +145,7 @@
             <img src="assets/images/dot-yellow.svg" alt="">
           </div>
           <p class="description">
-            Hover and click on each dot
+            Hover and click on each highlighted area
             to explore further insights
             and content.
           </p>
