--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </p>
           <p class="large">
             <strong>
-              Discover how AVEVA software can help you unlock performance intelligence in each of the industries below.
+              Discover how AVEVA software can help you unlock performance intelligence in each of the industries.
             </strong>
           </p>
         </div>
