--- a/consumer-products.html
+++ b/consumer-products.html
@@ -62,8 +62,8 @@
     <div class="container container-center">
       <div class="main-title-wrapper fade">
         <div>
-          <h2 class="center underline pull-up">Consumer-packaged Goods</h2>
-          <h3>Shaping a sustainable future in consumer product manufacturing</h3>
+          <h2 class="center underline pull-up">Shaping a sustainable future in consumer packaged goods</h2>
+          <!--<h3>Shaping a sustainable future in consumer product manufacturing</h3>-->
           <p class="center large pull-up">
             AVEVA's breadth of capabilities for digital manufacturing enable you to create and sustain value for your business. Leverage cloud or hybrid architecture and flexible subscription options to transform faster, reduce costs, and easily scale up and down in response to dynamic economic conditions. Along your journey, AVEVA capabilities can be deployed at the plant level for quick wins or as an enterprise-wide program across multiple plants.
           </p>
@@ -91,15 +91,15 @@
                   <div class="video-overlay show-on-level">
                     <div class="pulse-dot sustainability" data-sidebar="sustainability">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                      <div class="tooltip">Drive Sustainability</div>
+                      <div class="tooltip">Drive sustainability</div>
                     </div>
                     <div class="pulse-dot performance" data-sidebar="performance">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                      <div class="tooltip">Enable Agility</div>
+                      <div class="tooltip">Enable agility</div>
                     </div>
                     <div class="pulse-dot competency" data-sidebar="competency">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                      <div class="tooltip">Ensure Standards</div>
+                      <div class="tooltip">Ensure standards</div>
                     </div>
                   </div>
                 </div>
@@ -125,15 +125,15 @@
                   <div class="video-overlay show-on-level">
                     <div class="pulse-dot agility" data-sidebar="agility">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                      <div class="tooltip">Improve Productivity</div>
+                      <div class="tooltip">Improve productivity</div>
                     </div>
                     <div class="pulse-dot downtime"  data-sidebar="downtime">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                      <div class="tooltip">Ensure Quality</div>
+                      <div class="tooltip">Ensure quality</div>
                     </div>
                     <div class="pulse-dot margins" data-sidebar="margins">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                      <div class="tooltip">Improve Reliability</div>
+                      <div class="tooltip">Improve reliability</div>
                     </div>
                   </div>
                 </div>
@@ -147,7 +147,7 @@
             <img src="assets/images/dot-yellow.svg" alt="">
           </div>
           <p class="description">
-            Hover and click on each dot
+            Hover and click on each highlighted area
             to explore further insights
             and content.
           </p>
@@ -220,7 +220,7 @@
           </p>
 
           <p class="white">
-            With integrated planning and scheduling, you can synchronize  orders, capacity, and materials to generate feasible production schedules based on the cost, service, and speed objectives of multiple business segments.
+            With integrated planning and scheduling, you can synchronize orders, capacity, and materials to generate feasible production schedules based on the cost, service, and speed objectives of multiple business segments.
           </p>
         </div>
 
