--- a/energy.html
+++ b/energy.html
@@ -90,11 +90,11 @@
                   <div class="video-overlay show-on-level">
                     <div class="pulse-dot sustainability" data-sidebar="sustainability">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                      <div class="tooltip">Build Resilience</div>
+                      <div class="tooltip">Build resilience</div>
                     </div>
                     <div class="pulse-dot performance" data-sidebar="performance">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                      <div class="tooltip">Value Chain Optimization</div>
+                      <div class="tooltip">Value chain optimization</div>
                     </div>
                     <div class="pulse-dot competency" data-sidebar="competency">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
@@ -124,7 +124,7 @@
                   <div class="video-overlay show-on-level">
                     <div class="pulse-dot margins" data-sidebar="margins">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                      <div class="tooltip">Optimize Utilities</div>
+                      <div class="tooltip">Optimize utilities</div>
                     </div>
                     <div class="pulse-dot downtime"  data-sidebar="downtime">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
@@ -132,7 +132,7 @@
                     </div>
                     <div class="pulse-dot agility" data-sidebar="agility">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                      <div class="tooltip">Build Competency</div>
+                      <div class="tooltip">Build competency</div>
                     </div>
                   </div>
                 </div>
@@ -146,7 +146,7 @@
             <img src="assets/images/dot-yellow.svg" alt="">
           </div>
           <p class="description">
-            Hover and click on each dot
+            Hover and click on each highlighted area
             to explore further insights
             and content.
           </p>
