--- a/power.html
+++ b/power.html
@@ -90,15 +90,15 @@
                   <div class="video-overlay show-on-level">
                     <div class="pulse-dot sustainability" data-sidebar="sustainability">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                      <div class="tooltip">Engineering Efficiency</div>
+                      <div class="tooltip">Engineering efficiency</div>
                     </div>
                     <div class="pulse-dot performance" data-sidebar="performance">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                      <div class="tooltip">Enterprise Visibility</div>
+                      <div class="tooltip">Enterprise visibility</div>
                     </div>
                     <div class="pulse-dot competency" data-sidebar="competency">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                      <div class="tooltip">Workforce Empowerment</div>
+                      <div class="tooltip">Workforce empowerment</div>
                     </div>
                   </div>
                 </div>
@@ -128,11 +128,11 @@
                     </div>
                     <div class="pulse-dot downtime"  data-sidebar="downtime">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                      <div class="tooltip">Plant Efficiency</div>
+                      <div class="tooltip">Plant efficiency</div>
                     </div>
                     <div class="pulse-dot margins" data-sidebar="margins">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                      <div class="tooltip">Workforce Empowerment</div>
+                      <div class="tooltip">Workforce empowerment</div>
                     </div>
                   </div>
                 </div>
@@ -146,7 +146,7 @@
             <img src="assets/images/dot-yellow.svg" alt="">
           </div>
           <p class="description">
-            Hover and click on each dot
+            Hover and click on each highlighted area
             to explore further insights
             and content.
           </p>
